--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_native_splash:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.0
+  image_picker: ^1.2.1
+  dotted_border: ^3.1.0
 
 
 dev_dependencies:
