--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,17 @@ dependencies:
   flutter_svg: ^2.2.0
   image_picker: ^1.2.1
   dotted_border: ^3.1.0
-
+  dio: ^5.9.0
+  retrofit: ^4.9.1
+  json_serializable:
+  get_it: ^9.2.0
+  freezed:
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  retrofit_generator: ^10.2.0
+  pretty_dio_logger: ^1.4.0
+  flutter_bloc: ^9.1.1
+  build_runner: ^2.10.4
 
 dev_dependencies:
   flutter_test:
